# list

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  LinkedList.sln  README.md
LinkedList/: LinkedList.vcxproj  LinkedList.vcxproj.filters  list.h  main.cpp  test.cpp
LinkedList/linux/: main
include/dpm/: list.h
test/: CMakeLists.txt  test.cpp
